# mcd-ortho-opt

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  decomp.cpp  decomp.h  file_io.cpp  file_io.h  main.cpp  mcd-trap-decomp.ui  mesh.cpp  mesh.h  view.cpp  view.h
src/ipe/: header.ipe
src/nbproject/: configurations.xml  project.xml
